--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "trivia",
+  "author": {
+    "name": "MJ",
+    "email": "mikejackowski@gmail.com"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +11,20 @@
     "@types/node": "12.6.3",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.1",
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.3.2",
+    "styled-normalize": "^8.0.6",
+    "tslint": "^5.18.0",
+    "tslint-config-airbnb": "^5.11.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.0.0",
     "typescript": "3.5.3"
   },
   "scripts": {
