--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/he": "^1.1.0",
     "@types/jest": "24.0.15",
     "@types/node": "12.6.3",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.1.1",
     "axios": "^0.19.0",
+    "he": "^1.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
