--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "trivia",
+  "homepage": "https://mikejackowski.github.io/triviagame",
   "author": {
     "name": "MJ",
     "email": "mikejackowski@gmail.com"
@@ -14,6 +15,7 @@
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.1.1",
     "axios": "^0.19.0",
+    "gh-pages": "^2.0.1",
     "he": "^1.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -31,6 +33,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
