--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2",
     "styled-normalize": "^8.0.6",
+    "stylelint": "^10.1.0",
+    "stylelint-config-idiomatic-order": "^7.0.3",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-processor-styled-components": "^1.8.0",
     "tslint": "^5.18.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
@@ -37,6 +42,7 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lint:css":"stylelint './src/**/*.js'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
